--- a/Theme2/Task-1/Makefile
+++ b/Theme2/Task-1/Makefile
@@ -1,7 +1,12 @@
-all: compile run
+all: compile-static run
 
-compile: main.c math.c
-	gcc main.c math.c -o ./main.out
+compile-static: main.c lib/libmathStatic.a
+	gcc -c *.c
+	gcc -o main.out *.o -L lib -lmathStatic -lm
 
+compile-dynamic: main.c lib/libmathDynamic.so
+	gcc -c *.c
+	gcc -o main.out *.o -L lib -lmathDynamic -Wl,-rpath,lib/ -lm
+	
 run: main.out
 	./main.out
